--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.1",
+    "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.19.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
